Improve efficiency and network error handling